--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
-.App {
+body {
+  background-color: #f8f9fb!important;
+}
 
+.bg-white {
+  background-color: #FFF; 
+}
+
+#react-paginate ul {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#react-paginate li {
+  display: inline-block;
 }
